Fix icon overlapping text in quicksearch input field

--- a/ui/components/QuickSearch.scss
+++ b/ui/components/QuickSearch.scss
@@ -51,6 +51,7 @@
 
 input {
   width: 100%;
+  padding-right: 2rem;
 
   &.has-search-icon {
     padding-left: 2.5rem;
